objects/UAT_Issue__c.object
<CustomObject>
    <description>Issues found during UAT will be recorded here.</description>
    <fields>
        <fullName>Date_Complete__c</fullName>
        <label>Date Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Defect_Summary__c</fullName>
        <label>Defect Summary</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>ACI - Action Items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT - Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS - Change Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWB - Discovery Workbook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS - Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSL - Lessons Learned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MLS - Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDC - Pre-Discovery Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRJ - Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMSWL - RMS Canvas Workload Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPT - Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSK - Risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBP - SubProject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRT - Status Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRN - Training Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSK - Tasks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Comments__c</fullName>
        <label>IT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UAT_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prioritized_for_Fixing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prioritized for Fixing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Readiness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery Platform</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UAT_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Resolution__c</fullName>
        <label>Recommended Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reproducible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reproducible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequiresTraining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RequiresTraining?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Reason__c</fullName>
        <label>Resolution / Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Indirectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functions as Designed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Failed - Returned to Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Passed - Approved for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate_Error__c</fullName>
        <label>Steps to Recreate Error</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>System_Version_Iteration__c</fullName>
        <label>System Version / Iteration</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1 - Release 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 - Release 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 - Release 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2 - Release 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2 - Release 2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case_ID__c</fullName>
        <label>Test Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>UAT - Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT - TSK MGMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT - TSK2 &amp; Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT - Laser F/0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UAT - RMS Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>UAT Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Test_Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Assignee__c</columns>
        <columns>QA_Assignee__c</columns>
        <columns>IT_Comments__c</columns>
        <columns>Steps_to_Recreate_Error__c</columns>
        <columns>Recommended_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Laser</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Test_Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Assignee__c</columns>
        <columns>QA_Assignee__c</columns>
        <columns>IT_Comments__c</columns>
        <columns>Steps_to_Recreate_Error__c</columns>
        <columns>Recommended_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Phase__c</field>
            <operation>equals</operation>
            <value>UAT - Laser F/0</value>
        </filters>
        <label>All - Laser</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_RMS_Integration</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Test_Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Assignee__c</columns>
        <columns>QA_Assignee__c</columns>
        <columns>IT_Comments__c</columns>
        <columns>Steps_to_Recreate_Error__c</columns>
        <columns>Recommended_Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Test_Phase__c</field>
            <operation>equals</operation>
            <value>UAT - TSK MGMT,UAT - RMS Integration</value>
        </filters>
        <label>All - RMS Integration</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UAT-{00000}</displayFormat>
        <label>Unique Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>